# BestViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
PLY_FILES/: Bunny.ply  Test.ply  Tracteur.ply  Triangle.ply  anneau_bin.ply  bunny.ply  cow.ply  dode_ascii.ply  lampe.ply  sandale.ply  teapot.ply
buildDebug/: .qglviewer.xml  CMakeCache.txt  Makefile  MonProjet.cbp  bestView  cmake_install.cmake
buildDebug/include/: moc_shader.cxx_parameters  moc_simpleViewer.cxx_parameters
cmake/Modules/: FindQGLViewer.cmake
forms/: mainwindow.cpp  mainwindow.ui
include/: addColor.hpp  appearance.hpp  areInsideFrustum.hpp  backFaceCulling.hpp  barycenter.hpp  barycentre.hpp  coefficients.hpp  crossProduct.hpp  crossproduct.h  depthCulling.hpp  distanceToPlane.hpp  frontLine.hpp  frustumCulling.hpp  fusionBools.hpp  getBackTriangles.hpp  getCenter.hpp  getNormals.hpp  getbacktriangles.h  globalVariables.hpp  incircle.hpp  incircleDepthCulling.hpp  isFrontFace.hpp  isInsideFrustum.hpp  isNotOcculted.hpp  isOcculted.hpp  mainWindow.hpp  mainwindow.h  normals.hpp  notOccultedPoints.hpp  notOccultedTriangles.hpp  objLoader.hpp  observer.hpp  occultedPoints.hpp  projection.hpp  shader.hpp  simpleViewer.hpp  statistics.hpp  test.h  texture.hpp  toTxt.hpp  (+4 more)
shaders/: fragmentShader.frag  texture.vert  vertexShader.vert
src/: addColor.cpp  appearance.cpp  areInsideFrustum.cpp  backfaceCulling.cpp  barycenter.cpp  barycentre.cpp  coefficients.cpp  crossProduct.cpp  depthCulling.cpp  distanceToPlane.cpp  frontLine.cpp  frustumCulling.cpp  fusionBools.cpp  getBackTriangles.cpp  getCenter.cpp  getNormals.cpp  incircle.cpp  incircleDepthCulling.cpp  isFrontFace.cpp  isInsideFrustum.cpp  isNotOcculted.cpp  isOcculted.cpp  main.cpp  mainWindow.cpp  mainwindow.cpp  normals.cpp  notOccultedPoints.cpp  notOccultedTriangles.cpp  objLoader.cpp  observer.cpp  occultedPoints.cpp  projection.cpp  shader.cpp  simpleViewer.cpp  statistics.cpp  test.cpp  toTxt.cpp  updateIndex.cpp  updateVisibleTriangles.cpp  viewer.cpp
src/main/: main.cpp  mainServer.cpp
